@@ -1,0 +1,1 @@
+[Cydex] 您有一份來自"{{.PkgEvent.Owner.Username}}"的新包裹"{{.PkgEvent.Pkg.Title}}".
