@@ -1,0 +1,1 @@
+[Cydex] 您的包裹"{{.PkgEvent.Pkg.Title}}"已完成下載.
