@@ -1,0 +1,1 @@
+[Cydex] 您發送的包裹"{{.PkgEvent.Pkg.Title}}", 接收者"{{.PkgEvent.User.Username}}"開始下載.
